<resources>
    <string name="app_name">RecDeck App</string>
    <string name="stringBtnContinue">Continue</string>
    <string name="stringLogin">Login</string>
    <string name="stringSignup">Sign Up</string>
    <string name="intro_heading">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="intro_fragment_title_text">Title</string>
    <string name="intro_fragment_description_text">Description</string>
    <string name="btn_skip">Skip</string>
    <string name="string_intro_Fragment1_title">Welcome to a smarter way to connect.</string>
    <string name="string_intro_Fragment2_title">Your care, your people, your way.</string>
    <string name="string_intro_Fragment3_title">A safe digital space for every moment.</string>
    <string name="string_intro_Fragment1_desc">This app helps you stay in touch, stay informed, and live better every day. Smooth design, smart features, and support when you need it. Built for comfort and ease. Join us in creating a better digital world.</string>
    <string name="string_intro_Fragment2_desc">From wellness tracking to real-time chats, manage everything with ease. Simple tools meet smart tech, crafted to serve your daily needs. Because staying connected shouldn’t be complicated — it should feel right.</string>
    <string name="string_intro_Fragment3_desc">Security, support, and simplicity — all in one place. We protect your data and give you peace of mind. Whether you’re chatting, planning, or just checking in, we’ve got your back 24/7.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_username_email_hint">Enter your email address</string>
    <string name="loginHeading">Login to your account!</string>
    <string name="haveAccount">Don’t have an account?</string>
    <string name="alreadyHaveAccount">Already have an account!</string>
    <string name="stringSignUp">Sign Up</string>
    <string name="stringEmialAddress">Email Address</string>
    <string name="stringPassword">Password</string>
    <string name="signupHeading">Sign Up</string>
    <string name="stringChooseUserType">Choose your User Type to Create an Account!</string>
    <string name="stringOrganiserCradDesc">Lorem ipsum dolor sit amet consectetur. Ultrices sed ultrices purus arcu mauris.</string>
    <string name="stringOrganiserCradTitile">Organiser</string>
    <string name="stringFacilityCradTitile">Facility</string>
    <string name="stringFacilityCradDesc">Lorem ipsum dolor sit amet consectetur. Ultrices sed ultrices purus arcu mauris.</string>
    <string name="otpHeading">OTP Verification</string>
    <string name="stringOtpVerifyCodeHeading">Enter the 6 digit verification code we sent to you email John••••@gmail.com.</string>
    <string name="stringResend">Resend</string>
    <string name="stringTime">01:00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringFullNameSignup">Full Name</string>
    <string name="stringEnterFullNameHint">Enter your full name</string>
    <string name="stringEnterPassSignUp1">Enter password</string>
    <string name="stringConfirmPassword">Confirm Password</string>
    <string name="stringConfirmPassSignUp1">Confirm password</string>
    <string name="stringIam18Years">I am 18 Years of age or Older.</string>
    <string name="stringLocationSignUp1">Location</string>
    <string name="stringSetProfileHeading">Set your Profile</string>
    <string name="stringDateOfBirth">Date of Birth</string>
    <string name="stringDoBformatHintSignUp2">DD/MM/YYYY</string>
    <string name="stringGender">Gender</string>
    <string name="stringSelectGender">Select</string>
    <string name="stringUploadFileHeading">Upload Files</string>
    <string name="stringDescOfFilesFormat">File formats are PNG,JPG, PDF \nFile size: 5MB max</string>
    <string name="stringCamera">Camera</string>
    <string name="stringGallery">Gallery</string>
    <string name="signUpSuccessfulHeading">Sign Up Successfully!</string>
    <string name="stringVerifySuccessful">A verification link has been sent to your \nemail Address johndeo12@gmail.com, Click the link to verify your account.</string>
    <string name="stringCityHint">City</string>
    <string name="stringCountryHint">Country</string>
    <string name="stringInterestIn">What are your interest in?</string>
    <string name="stringSelectMultipleIntrest">You can select Multiple interests</string>
    <string name="stringDescSignUp3">Browse through an array of enticing events and select the ones that spark your curiosity. Dive into unforgettable experiences tailored just for you.</string>
    <string name="stringAlmostDoneHeading">Almost There!</string>
    <string name="stringReqDocsHeading2">Required Documents</string>
    <string name="stringReqDocsDesc">Complete the sign-up process by uploading your facility\'s we need following documents. This helps us verify your legitimacy and ensures a smooth registration experience for you.</string>
    <string name="stringIdPassNum">ID/Passport Number</string>
    <string name="stringIdPassNumHint">ABC 123456789</string>
    <string name="stringReqDocsFormate">File Formats are PNG, JPG, PDf, \n5MB max file size</string>
    <string name="stringUploadFileHere">Upload your files here</string>
    <string name="stringInnerUpload">+Upload</string>
    <string name="stringFileName">File Name</string>
    <string name="stringFileType">File Type</string>
    <string name="stringUploadDocsHeading">Uploading Documents</string>
    <string name="stringRemove">Remove</string>
    <string name="stringFileSize">File Size</string>
    <string name="stringConfirmation">Confirmation</string>
    <string name="stringAlertMessage">Are you sure you want to delete this event?</string>
    <string name="stringYes">Yes</string>
    <string name="StringNo">No</string>
    <string name="stringNo">No</string>
    <string name="stringDescriptions">Descriptions</string>
    <string name="stringDescWriteHere">Write here. . .</string>
    <string name="stringCharactersLimit">0/600 Characters</string>
    <string name="chats">Chats</string>
    <string name="pitches">Pitches</string>
    <string name="my_bookings">My Bookings</string>
    <string name="stringMybookings">My Booking</string>
    <string name="events">Events</string>
    <string name="groups">Groups</string>
    <string name="search_events">Search events. . .</string>
    <string name="explore_events">Explore Events</string>
    <string name="create_event">+ Create Event</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="stringEventNameTitle">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="_22_attendees">22 Attendees</string>
    <string name="sar_2_00_per_head">SAR 2,00/ per head</string>
    <string name="stringAlert">Alert!</string>
    <string name="stringFilters">Filters</string>
    <string name="stringEventCategory">Event Category</string>
    <string name="stringSelect">Select</string>
    <string name="stringDistance">Distance</string>
    <string name="stringPitch">Pitch</string>
    <string name="stringSelectDate">Select Date</string>
    <string name="stringSelectPitch">Select Pitch</string>
    <string name="stringReset">Reset</string>
    <string name="stringApply">Apply</string>
    <string name="event_details">Event Details</string>
    <string name="event_name">Ultimate Sports Extravaganza</string>
    <string name="event_complete_lines">Lorem ipsum dolor sit amet consectetur. Faucibus mi nec lacinia condimentum velit varius sagittis. Lobortis mi leo sapien mi tellus facilisi risus urna vitae. Lectus et sed diam placerat odio convallis. Tincidunt libero rhoncus odio interdum. Dictum mauris ornare in laoreet risus commodo. Semper faucibus et amet orci sit. Adipiscing sem quam morbi volutpat consectetur tincidunt ultricies. Commodo cras ultrices sed euismod libero egestas proin. Lectus quis ac nibh eros aliquam aliquam integer quisque. Dignissim mi adipiscing ultricies sed. Suspendisse hendrerit volutpat bibendum netus egestas pellentesque posuere iaculis. Habitasse dolor mi praesent vel. Tempor facilisi lorem pellentesque sed sed. Faucibus sed neque dignissim aliquet vulputate.</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="stringCancelEvent">Cancel Event</string>
    <string name="stringShare">Share</string>
    <string name="join_event">Join Event</string>
    <string name="stringEventFees">Event Fees</string>
    <string name="date_time">Date &amp;  Time</string>
    <string name="hosted_by">Hosted by</string>
    <string name="john_deo">John Deo</string>
    <string name="attendees">Attendees</string>
    <string name="total_event_fee">Total Event Fee</string>
    <string name="sar_10_000">SAR 10,000</string>
    <string name="attendees_limit">Attendees Limit</string>
    <string name="_10_members_only">10 Members only</string>
    <string name="event_cancelation_fee">Event Cancelation Fee &amp; Time</string>
    <string name="_10">10%</string>
    <string name="_1_hours_before_event">1 hours Before Event</string>
    <string name="one_time">One Time</string>
    <string name="location_name">Sport Complex, Ajman Dubie. . .</string>
    <string name="group_details">Group Details</string>
    <string name="group_title_here">Group Title here</string>
    <string name="no">No</string>
    <string name="stringDateFormat">12 Friday, 2023 - 12:30 PM</string>
    <string name="yes">Yes</string>
    <string name="delete_event_text">Are you sure you want to delete this event?</string>
    <string name="stringEventType">Event Type</string>
    <string name="stringPermissionDesc">Camera permission is required. Please enable it from settings.</string>
    <string name="stringGoToSetting">Go to Settings</string>
    <string name="stringCancel">Cancel</string>
    <string name="stringNotification">Notifications</string>
    <string name="stringCreateEvent">Create Event</string>
    <string name="stringCancelx">X  Cancel</string>
    <string name="stringCreateGroup">Create Group</string>
    <string name="stringStep1">Step 1</string>
    <string name="stringCreateEvenTDesc">You have no group and create Events without Groups, Create Group First.</string>
    <string name="stringStep2">Step 2</string>
    <string name="stringStep3">Step 3</string>
    <string name="stringSelectCategory">Select Category</string>
    <string name="stringGroupDetail">Group Details</string>
    <string name="stringGroupName">Group Name</string>
    <string name="stringNumOfGroupMem">Number of Group Members</string>
    <string name="stringEnterGroupNameHint">Enter group name</string>
    <string name="stringNoOfGroupMemHint">Enter number of group members</string>
    <string name="stringCreateGroupDropdown">Dropdown</string>
    <string name="stringGroupRulesAndImage"><![CDATA[Group Rules  & Image]]></string>
    <string name="stringGroupRules">Group Rules</string>
    <string name="stringGroupProfileImage">Group Profile Image</string>
    <string name="stringPermissionInstructionMessage">Permission is required to proceed. Please enable it from settings.</string>
    <string name="stringGoToSettings">Go to Settings</string>
    <string name="stringFile">File</string>
    <string name="stringPermissionRequired">This permission is required. Please allow it from settings</string>
    <string name="stringPermissionNeeded">Permission Needed!</string>
    <string name="stringDescriptionHere">Description here...</string>
    <string name="stringEventDetail">Event Details</string>
    <string name="stringStep4">Step 4</string>
    <string name="stringStep6">Step 6</string>
    <string name="stringStep5">Step 5</string>
    <string name="stringEventDescAndImage"><![CDATA[Even Description & Images]]></string>
</resources>