<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:gravity="center">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringPermissionDesc"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@android:color/black"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoToSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringGoToSetting"
            android:fontFamily="@font/nunito_bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_main"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringCancel"
            android:fontFamily="@font/nunito_bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_main" />
    </LinearLayout>
</LinearLayout>
